shell/shell-mf/k8s/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shell-mf
  labels:
    app: shell-mf
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: shell-mf
