shell/shell-mf/k8s/node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shell-mf-node-port-service
  labels:
    app: shell-mf-node-port-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      nodePort: 30000
      port: 3000
      targetPort: 3000
  selector:
    name: shell-mf-deployment
