shell/shell-mf/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shell-mf
  labels:
    app: shell-mf
spec:
  type: NodePort
  ports:
    - nodePort: 30000
      port: 3000
      targetPort: 3000
  selector:
    app: shell-mf
