shell/shell-mf/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shell-mf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: shell-mf.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shell-mf-service
                port:
                  number: 3000
