shell/shell-mf/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shell-mf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: shell-mf.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
<<<<<<< HEAD
                name: shell-mf-service
=======
                name: shell-mf-cluster-ip-service
>>>>>>> b4e4f22 (Sync routes across Micro Frontends)
                port:
                  number: 3000
